--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	.responsive-img {
 	float: left; /* 使图片浮动，使得文字可以环绕图片 */
 	margin-right: 15px; /* 在图片和文字之间添加一些间隙 */
-	width: 90%; /* 设置图片宽度为容器宽度的50%，根据需要调整 */
+	width: 50%; /* 设置图片宽度为容器宽度的50%，根据需要调整 */
 	}
 	td {
 	display: block; /* 使单元格表现得像块元素，以便图片和文字可以正确环绕 */
@@ -65,7 +65,7 @@
 </tr>
 
 <tr>
-<td><a href="https://arxiv.org/abs/2309.01065"><img style="vertical-align:middle" src="accessories/yinqiuopt.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td><a href="https://arxiv.org/abs/2309.01065"><img class="responsive-img" style="vertical-align:middle" src="accessories/yinqiuopt.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
 <td>
 <b>Optimizing Mobile-Edge AI-Generated Everything (AIGX) Services by Prompt Engineering: Fundamental, Framework, and Case Study</b>
 <br>Yinqiu Liu, Hongyang Du, Dusit Niyato, Jiawen Kang, Shuguang Cui, Xuemin Shen, Ping Zhang<br>
@@ -82,7 +82,7 @@
 </tr>
 
 <tr>
-<td><a href="https://hongyangdu.github.io/DistributedDiffusion/"><img style="vertical-align:middle" src="accessories/duuser.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td><a href="https://hongyangdu.github.io/DistributedDiffusion/"><img class="responsive-img" style="vertical-align:middle" src="accessories/duuser.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
 <td>
 <b>User-Centric Interactive AI for Distributed Diffusion Model-based AI-Generated Content</b>
 <br>Hongyang Du, Ruichen Zhang, Dusit Niyato, Jiawen Kang, Zehui Xiong, Shuguang Cui, Xuemin Shen, Dong In Kim<br>
