--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <td>
 <b>Optimizing Mobile-Edge AI-Generated Everything (AIGX) Services by Prompt Engineering: Fundamental, Framework, and Case Study</b>
 <br>Yinqiu Liu, Hongyang Du, Dusit Niyato, Jiawen Kang, Shuguang Cui, Xuemin Shen, Ping Zhang<br>
-<em> IEEE Network</em> <br>
+<em>IEEE Network Magazine</em> <br>
 <em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">This paper highlights how prompt engineering and AIGC are related to mobile networks.</b> </em> <br>
 <img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
 <a href="https://arxiv.org/pdf/2309.01065.pdf">Paper</a> |
@@ -96,6 +96,184 @@
 <a href="https://www.youtube.com/watch?v=Vva-skuHBC4&ab_channel=DurAIn-Tech%E6%B8%A1%E9%9B%A8%E7%A7%91%E6%8A%80">YouTube</a> |
 <img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
 <a href="https://www.bilibili.com/video/BV1kC4y1w7mY/?spm_id_from=333.337.search-card.all.click&vd_source=7a1cccf64fe5f606a2b055b2b18fbfb9">Bilibili</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+<tr>
+<td><a href="https://arxiv.org/abs/2309.02616"><img class="responsive-img" style="vertical-align:middle" src="accessories/dumolti.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Generative AI-aided Joint Training-free Secure Semantic Communications via Multi-modal Prompts</b>
+<br>Hongyang Du, Guangyuan Liu, Dusit Niyato, Jiayi Zhang, Jiawen Kang, Zehui Xiong, Bo Ai, Dong In Kim<br>
+<em>ICASSP 2024</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">This paper demonstrates how multi-modal prompt (text+image) can improve AIGC used in semantic communication with covert communication technique.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2309.02616.pdf">Paper</a> |
+<img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
+<a href="https://github.com/HongyangDu/LASER">Code</a> |
+<img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.youtube.com/watch?v=o-Azz_KeMxg&t=992s&ab_channel=DurAIn-Tech">YouTube</a> |
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.bilibili.com/video/BV1MV411A7U1/?spm_id_from=333.999.0.0">Bilibili</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+<tr>
+<td><a href="https://arxiv.org/abs/2310.01036"><img class="responsive-img" style="vertical-align:middle" src="accessories/jcisac.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Generative AI for Integrated Sensing and Communication: Insights from the Physical Layer Perspective</b>
+<br>Jiacheng Wang, Hongyang Du, Dusit Niyato, Jiawen Kang, Shuguang Cui, Xuemin Shen, Ping Zhang<br>
+<em>IEEE Wireless Communications Magazine</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">The paper showcases the use of generative AI in integrated sensing and communications, especially from physical layer.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2310.01036.pdf">Paper</a> |
+<img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.youtube.com/watch?v=ZqSmgw0XOXo&ab_channel=DurAIn-Tech">YouTube</a> |
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.bilibili.com/video/BV1v84y1m7kn/?spm_id_from=333.999.0.0">Bilibili</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+
+<tr>
+<td><a href="https://arxiv.org/abs/2307.07146"><img class="responsive-img" style="vertical-align:middle" src="accessories/xuminfl.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Federated Learning-Empowered AI-Generated Content in Wireless Networks</b>
+<br>Xumin Huang, Peichun Li, Hongyang Du, Jiawen Kang, Dusit Niyato, Dong In Kim, Yuan Wu<br>
+<em>IEEE Network Magazine</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">This paper presents the federated learning design to support AIGC with privacy preservation.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2307.07146.pdf">Paper</a> |
+<img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.youtube.com/watch?v=1anrIJeyqtw">YouTube</a> |
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.bilibili.com/video/BV1GB4y1Z7Mr/?spm_id_from=333.999.0.0">Bilibili</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+
+<tr>
+<td><a href="https://arxiv.org/abs/2303.14624"><img class="responsive-img" style="vertical-align:middle" src="accessories/jcgm.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Guiding AI-Generated Digital Content with Wireless Perception</b>
+<br>Jiacheng Wang, Hongyang Du, Dusit Niyato, Zehui Xiong, Jiawen Kang, Shiwen Mao, Xuemin (Sherman) Shen<br>
+<em>IEEE Wireless Communications Magazine</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">The paper explains the use of wireless sensing data for input of AIGC applications to generate images and videos.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2303.14624.pdf">Paper</a> |
+<img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.youtube.com/watch?v=7Y2gqrz4ukI&ab_channel=DurAIn-Tech">YouTube</a> |
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.bilibili.com/video/BV1F841117Nw/?spm_id_from=333.999.0.0">Bilibili</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+<tr>
+<td><a href="https://arxiv.org/abs/2303.17114"><img class="responsive-img" style="vertical-align:middle" src="accessories/yqgm.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Deep Generative Model and Its Applications in Efficient Wireless Network Management: A Tutorial and Case Study</b>
+<br>Yinqiu Liu, Hongyang Du, Dusit Niyato, Jiawen Kang, Zehui Xiong, Dong In Kim, Abbas Jamalipour<br>
+<em>IEEE Network Magazine</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">The paper gives specific examples of generative AI to optimize wireless networks.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2303.17114.pdf">Paper</a> |
+<img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.youtube.com/watch?v=30gRmUZj9V4&ab_channel=DurAIn-Tech">YouTube</a> |
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.bilibili.com/video/BV1M8411174N/?vd_source=89dd8b52d1d8508a3722af991a8fa825">Bilibili</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+
+<tr>
+<td><a href="https://arxiv.org/abs/2303.13869"><img class="responsive-img" style="vertical-align:middle" src="accessories/yud.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>AI-Generated 6G Internet Design: A Diffusion Model-based Learning Approach</b>
+<br>Yudong Huang, Minrui Xu, Xinyuan Zhang, Dusit Niyato, Zehui Xiong, Shuo Wang, Tao Huang<br>
+<em>IEEE Network Magazine</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">The paper introduces a concept of AI-Generated Network. </b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/abs/2303.13869">Paper</a> |
+<img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.youtube.com/watch?v=WoEHUlADJbk">YouTube</a> |
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.bilibili.com/video/BV1Aw411C7M2/?spm_id_from=333.999.0.0">Bilibili</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+<tr>
+<td><a href="https://arxiv.org/abs/2304.11098"><img class="responsive-img" style="vertical-align:middle" src="accessories/rcv.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Generative AI-enabled Vehicular Networks: Fundamentals, Framework, and Case Study</b>
+<br>Ruichen Zhang, Ke Xiong, Hongyang Du, Dusit Niyato, Jiawen Kang, Xuemin Shen, H. Vincent Poor<br>
+<em>IEEE Network Magazine</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">The paper summarizes and showcases how generative AI can be used in healthcare applications. </b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2304.11098.pdf">Paper</a> |
+<img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.youtube.com/watch?v=pRzbHGw-5dk&ab_channel=DurAIn-Tech">YouTube</a> |
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.bilibili.com/video/BV1jN411n7ef/?spm_id_from=333.999.0.0">Bilibili</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+
+<tr>
+<td><a href="https://arxiv.org/abs/2307.12115"><img class="responsive-img" style="vertical-align:middle" src="accessories/heal.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>A Revolution of Personalized Healthcare: Enabling Human Digital Twin with Mobile AIGC</b>
+<br>Jiayuan Chen, Changyan Yi, Hongyang Du, Dusit Niyato, Jiawen Kang, Jun Cai, Xuemin (Sherman) Shen<br>
+<em>IEEE Network Magazine</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">The paper summarizes and showcases how generative AI can be used in healthcare applications. </b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2307.12115.pdf">Paper</a> |
+<img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.youtube.com/watch?v=T76EHYqap7o&ab_channel=DurAIn-Tech">YouTube</a> |
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.bilibili.com/video/BV1XH4y1o7in/?spm_id_from=333.999.0.0">Bilibili</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+
+<tr>
+<td><a href="https://arxiv.org/abs/2308.14578"><img class="responsive-img" style="vertical-align:middle" src="accessories/jkflp.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Flexible-Position MIMO for Wireless Communications: Fundamentals, Challenges, and Future Directions</b>
+<br>Jiakang Zheng, Jiayi Zhang, Hongyang Du, Dusit Niyato, Sumei Sun, Bo Ai, Khaled B. Letaief<br>
+<em>IEEE Wireless Communications Magazine</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">The paper disucsses a new type of an antenna system that allows antenna elements to be adjusted location-wise; generative AI is also used to optimize the location and movement paths of the antenna elements.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2308.14578.pdf">Paper</a> |
+<img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.youtube.com/watch?v=sYX8PxlTymw">YouTube</a> |
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.bilibili.com/video/BV1tC4y1G72U/?spm_id_from=333.999.0.0">Bilibili</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+
+<tr>
+<td><a href="https://arxiv.org/abs/2306.14138"><img class="responsive-img" style="vertical-align:middle" src="accessories/duapple.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>YOLO-based Semantic Communication with Generative AI-aided Resource Allocation for Digital Twins Construction</b>
+<br>Jiakang Zheng, Jiayi Zhang, Hongyang Du, Dusit Niyato, Sumei Sun, Bo Ai, Khaled B. Letaief<br>
+<em>IEEE Wireless Communications Magazine</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">The paper introduces a new semantic communication application that utilizes a generative AI method to solve edge resource allocation to construct efficient digital twins. </b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2306.14138.pdf">Paper</a> |
+<img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
+<a href="hhttps://www.youtube.com/watch?v=TctQyS9zGTo">YouTube</a> |
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.bilibili.com/video/BV1Fu411F7Rx/?spm_id_from=333.337.search-card.all.click&vd_source=7a1cccf64fe5f606a2b055b2b18fbfb9">Bilibili</a>
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
