--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <td>
 <b>Beyond Deep Reinforcement Learning: A Tutorial on Generative Diffusion Models in Network Optimization</b>
 <br>Hongyang Du, Ruichen Zhang, Yinqiu Liu, Jiacheng Wang, Yijing Lin, Zonghang Li, Dusit Niyato, Jiawen Kang, Zehui Xiong, Shuguang Cui, Bo Ai, Haibo Zhou, Dong In Kim<br>
-<em> IEEE COMST </em> <br>
+<em>IEEE COMST </em> <br>
 <em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(245,50,190);">The first tutorial paper to explain various applications of diffusion models and coding examples.</b> </em> <br>
 <img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
 <a href="https://arxiv.org/pdf/2308.05384.pdf">Paper</a> |
@@ -63,6 +63,54 @@
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
+
+<tr>
+<td><a href="https://hongyangdu.github.io/Net4MoE/"><img class="responsive-img" style="vertical-align:middle" src="accessories/jcmoe.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Toward Scalable Generative AI via Mixture of Experts in Mobile Edge Networks</b>
+<br>Jiacheng Wang, Hongyang Du, Dusit Niyato, Jiawen Kang, Zehui Xiong, Dong In Kim, Khaled B. Letaief<br>
+<em>Under Review</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">This paper proposes mobile edge networks supported MoE-based GAI.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2402.06942.pdf">Paper</a> |
+<img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
+<a href="https://hongyangdu.github.io/Net4MoE/">Code</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+
+<tr>
+<td><a href="https://hongyangdu.github.io/MoE4OPT/"><img class="responsive-img" style="vertical-align:middle" src="accessories/jcmoe.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Mixture of Experts for Network Optimization: A Large Language Model-enabled Approach</b>
+<br>Hongyang Du, Guangyuan Liu, Yijing Lin, Dusit Niyato, Jiawen Kang, Zehui Xiong, Dong In Kim<br>
+<em>Under Review</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">This paper propose a Mixture of Experts (MoE) framework, augmented with Large Language Models (LLMs), to analyze user objectives and constraints, select specialized DRL experts, and weigh each decision.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2402.09756.pdf">Paper</a> |
+<img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
+<a href="https://hongyangdu.github.io/MoE4OPT/">Code</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+
+<tr>
+<td><a href="https://rickyzang.github.io/GIAI/"><img class="responsive-img" style="vertical-align:middle" src="accessories/rciai.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Interactive Al with Retrieval-Augmented Generation for Next-Generation Networking</b>
+<br>Ruichen Zhang, Hongyang Du, Yinqiu Liu, Dusit Niyato, Jiawen Kang, Sumei Sun, Xuemin Shen, H. Vincent Poor<br>
+<em>Under Review</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">This paper explores an integration and enhancement of interactive AI (IAI) in networking.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2401.11391.pdf">Paper</a> |
+<img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
+<a href="https://rickyzang.github.io/GIAI/">Code</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
 
 <tr>
 <td><a href="https://arxiv.org/abs/2309.01065"><img class="responsive-img" style="vertical-align:middle" src="accessories/yinqiuopt.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
@@ -96,6 +144,21 @@
 <a href="https://www.youtube.com/watch?v=Vva-skuHBC4&ab_channel=DurAIn-Tech%E6%B8%A1%E9%9B%A8%E7%A7%91%E6%8A%80">YouTube</a> |
 <img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
 <a href="https://www.bilibili.com/video/BV1kC4y1w7mY/?spm_id_from=333.337.search-card.all.click&vd_source=7a1cccf64fe5f606a2b055b2b18fbfb9">Bilibili</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+<tr>
+<td><a href="https://hongyangdu.github.io/SemSharing/"><img class="responsive-img" style="vertical-align:middle" src="accessories/duincen.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>AI-Generated Incentive Mechanism and Full-Duplex Semantic Communications for Information Sharing</b>
+<br>Hongyang Du, Jiacheng Wang, Dusit Niyato, Jiawen Kang, Zehui Xiong, Dong In Kim<br>
+<em>IEEE Journal on Selected Areas in Communications</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">This paper proposes a contract theoretic AI-generated incentive mechanism that generates the optimal contract design.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2303.01896.pdf">Paper</a> |
+<img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
+<a href="https://hongyangdu.github.io/SemSharing/">Code</a>
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
@@ -265,8 +328,8 @@
 <td><a href="https://arxiv.org/abs/2306.14138"><img class="responsive-img" style="vertical-align:middle" src="accessories/duapple.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
 <td>
 <b>YOLO-based Semantic Communication with Generative AI-aided Resource Allocation for Digital Twins Construction</b>
-<br>Jiakang Zheng, Jiayi Zhang, Hongyang Du, Dusit Niyato, Sumei Sun, Bo Ai, Khaled B. Letaief<br>
-<em>IEEE Wireless Communications Magazine</em> <br>
+<br>Baoxia Du, Hongyang Du, Haifeng Liu, Dusit Niyato, Peng Xin, Jun Yu, Mingyang Qi, You Tang<br>
+<em>IEEE Internet of Things Journal</em> <br>
 <em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">The paper introduces a new semantic communication application that utilizes a generative AI method to solve edge resource allocation to construct efficient digital twins. </b> </em> <br>
 <img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
 <a href="https://arxiv.org/pdf/2306.14138.pdf">Paper</a> |
@@ -274,6 +337,37 @@
 <a href="hhttps://www.youtube.com/watch?v=TctQyS9zGTo">YouTube</a> |
 <img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
 <a href="https://www.bilibili.com/video/BV1Fu411F7Rx/?spm_id_from=333.337.search-card.all.click&vd_source=7a1cccf64fe5f606a2b055b2b18fbfb9">Bilibili</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+<tr>
+<td><a href="https://hongyangdu.github.io/SemSensing/"><img class="responsive-img" style="vertical-align:middle" src="accessories/DUINVER.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Semantic Communications for Wireless Sensing: RIS-aided Encoding and Self-supervised Decoding</b>
+<br>Hongyang Du, Jiacheng Wang, Dusit Niyato, Jiawen Kang, Zehui Xiong, Junshan Zhang, Xuemin (Sherman) Shen<br>
+<em>IEEE Journal on Selected Areas in Communications</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">This paper proposes the inverse semantic communications.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2211.12727.pdf">Paper</a> |
+<img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
+<a href="https://hongyangdu.github.io/SemSensing/">Code</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+
+<tr>
+<td><a href="https://hongyangdu.github.io/AttentionQoE/"><img class="responsive-img" style="vertical-align:middle" src="accessories/duatten.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Attention-aware Resource Allocation and QoE Analysis for Metaverse xURLLC Services</b>
+<br>Hongyang Du, Jiazhen Liu, Dusit Niyato, Jiawen Kang, Zehui Xiong, Junshan Zhang, Dong In Kim<br>
+<em>IEEE Journal on Selected Areas in Communications</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">This paper proposes a novel metric named Meta-Immersion that incorporates both the objective KPIs and subjective feelings of Metaverse users.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2208.05438.pdf">Paper</a> |
+<img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
+<a href="https://hongyangdu.github.io/AttentionQoE/">Code</a>
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
