--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 </td>
 </tr>
 
+
 <tr>
 <td><a href="https://hongyangdu.github.io/Net4MoE/"><img class="responsive-img" style="vertical-align:middle" src="accessories/jcmoe.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
 <td>
@@ -159,6 +160,22 @@
 <a href="https://arxiv.org/pdf/2303.01896.pdf">Paper</a> |
 <img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
 <a href="https://hongyangdu.github.io/SemSharing/">Code</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+
+<tr>
+<td><a href="https://arxiv.org/abs/2303.13052"><img class="responsive-img" style="vertical-align:middle" src="accessories/dutmc.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Diffusion-based Reinforcement Learning for Edge-enabled AI-Generated Content Services</b>
+<br>Hongyang Du, Zonghang Li, Dusit Niyato, Jiawen Kang, Zehui Xiong, Huawei Huang, and Shiwen Mao<br>
+<em>IEEE Transactions on Mobile Computing</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(245,50,190);">This paper proposes a diffusion model-based AI-generated optimal decision (AGOD) algorithm, which can generate the optimal ASP selection decisions.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2303.13052.pdf">Paper</a> |
+<img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
+<a href="https://github.com/Lizonghang/AGOD">Code</a>
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
