--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 
 <tr>
-<td><a href="https://hongyangdu.github.io/MoE4OPT/"><img class="responsive-img" style="vertical-align:middle" src="accessories/jcmoe.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td><a href="https://hongyangdu.github.io/MoE4OPT/"><img class="responsive-img" style="vertical-align:middle" src="accessories/dumoeopt.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
 <td>
 <b>Mixture of Experts for Network Optimization: A Large Language Model-enabled Approach</b>
 <br>Hongyang Du, Guangyuan Liu, Yijing Lin, Dusit Niyato, Jiawen Kang, Zehui Xiong, Dong In Kim<br>
