--- a/index.html
+++ b/index.html
@@ -112,6 +112,22 @@
 </td>
 </tr>
 
+<tr>
+<td><a href="https://arxiv.org/abs/2308.04942"><img class="responsive-img" style="vertical-align:middle" src="accessories/guangyuansem.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Semantic communications for artificial intelligence generated content (AIGC) toward effective content creation</b>
+<br>Guangyuan Liu, Hongyang Du, Dusit Niyato, Jiawen Kang, Zehui Xiong, Dong In Kim, Xuemin Shen<br>
+<em>IEEE Network Magazine</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);"> In this paper, a novel comprehensive conceptual model for the integration of AIGC and SemCom is developed.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2308.04942.pdf">Paper</a> |
+<img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.youtube.com/watch?v=-n1fKwBHouI">YouTube</a> |
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.bilibili.com/video/BV1w94y1b7zj/?spm_id_from=333.337.search-card.all.click&vd_source=7a1cccf64fe5f606a2b055b2b18fbfb9">Bilibili</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
 
 <tr>
 <td><a href="https://arxiv.org/abs/2309.01065"><img class="responsive-img" style="vertical-align:middle" src="accessories/yinqiuopt.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
