--- a/index.html
+++ b/index.html
@@ -129,6 +129,24 @@
 </td>
 </tr>
 
+
+<tr>
+<td><a href="https://arxiv.org/abs/2311.06523"><img class="responsive-img" style="vertical-align:middle" src="accessories/ruicehnsagin.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Generative AI for Space-Air-Ground Integrated Networks (SAGIN)</b>
+<br>Ruichen Zhang, Hongyang Du, Dusit Niyato, Jiawen Kang, Zehui Xiong, Abbas Jamalipour, Ping Zhang, Dong In Kim<br>
+<em>IEEE Wireless Communications Magazine</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);"> This paper explores an integration of generative AI in SAGIN, focusing on potential applications and case study.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2311.06523.pdf">Paper</a> |
+<img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.youtube.com/watch?v=cQ2vA4rOHME">YouTube</a> |
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.bilibili.com/video/BV1fT4y1s7Eq/?spm_id_from=333.337.search-card.all.click">Bilibili</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
 <tr>
 <td><a href="https://arxiv.org/abs/2309.01065"><img class="responsive-img" style="vertical-align:middle" src="accessories/yinqiuopt.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
 <td>
