--- a/index.html
+++ b/index.html
@@ -131,6 +131,19 @@
 
 
 <tr>
+<td><a href="https://arxiv.org/abs/2402.13553"><img class="responsive-img" style="vertical-align:middle" src="accessories/cys.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Generative AI for Secure Physical Layer Communications: A Survey</b>
+<br>Changyuan Zhao, Hongyang Du, Dusit Niyato, Jiawen Kang, Zehui Xiong, Dong In Kim, Xuemin (Sherman) Shen, Khaled B. Letaief<br>
+<em>Under review</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);"> This paper offers an extensive survey on the various applications of GAI in enhancing security within the physical layer of communication networks.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2402.13553.pdf">Paper</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+<tr>
 <td><a href="https://arxiv.org/abs/2311.06523"><img class="responsive-img" style="vertical-align:middle" src="accessories/ruicehnsagin.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
 <td>
 <b>Generative AI for Space-Air-Ground Integrated Networks (SAGIN)</b>
