--- a/index.html
+++ b/index.html
@@ -91,7 +91,11 @@
 <img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
 <a href="https://arxiv.org/pdf/2402.09756.pdf">Paper</a> |
 <img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
-<a href="https://hongyangdu.github.io/MoE4OPT/">Code</a>
+<a href="https://hongyangdu.github.io/MoE4OPT/">Code</a>|
+<img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.youtube.com/watch?v=ALh2Pc-uqbg">YouTube</a> |
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.bilibili.com/video/BV1Zx4y1k7Hr/?spm_id_from=333.999.0.0">Bilibili</a>
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
