--- a/index.html
+++ b/index.html
@@ -66,6 +66,34 @@
 
 
 <tr>
+<td><a href="https://limedire.github.io/GAI-Game/"><img class="responsive-img" style="vertical-align:middle" src="accessories/gaigame.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Generative AI for Game Theory-based Mobile Networking</b>
+<br>Long He, Geng Sun, Dusit Niyato, Hongyang Du, Fang Mei, Jiawen Kang, Mérouane Debbah, Zhu Han<br>
+<em>Under Review</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">The paper explores the combination of LLM with game theory, focusing on mobile network optimization.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/abs/2404.09699">Paper</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+
+<tr>
+<td><a href="https://xiewenwen22.github.io/UAV_Spectrum_Estimation/"><img class="responsive-img" style="vertical-align:middle" src="accessories/gaiuav.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Generative AI for Advanced UAV Networking</b>
+<br>Geng Sun, Wenwen Xie, Dusit Niyato, Hongyang Du, Jiawen Kang, Jing Wu, Sumei Sun, Ping Zhang<br>
+<em>Under Review</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">This paper proposed a framework for UAV networking, which augments with RAG and generative diffusion model.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2404.10556.pdf">Paper</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+
+<tr>
 <td><a href="https://hongyangdu.github.io/Net4MoE/"><img class="responsive-img" style="vertical-align:middle" src="accessories/jcmoe.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
 <td>
 <b>Toward Scalable Generative AI via Mixture of Experts in Mobile Edge Networks</b>
