--- a/index.html
+++ b/index.html
@@ -66,6 +66,22 @@
 
 
 <tr>
+<td><a href="https://limedire.github.io/GAI-Game/"><img class="responsive-img" style="vertical-align:middle" src="accessories/zhe1.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Generative AI Agent for Next-Generation MIMO Design: Fundamentals, Challenges, and Vision</b>
+<br>Zhe Wang, Jiayi Zhang, Hongyang Du, Ruichen Zhang, Dusit Niyato, Bo Ai, Khaled B. Letaief<br>
+<em>Under Review</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">This paper studies the generative AI agent for next-generation MIMO design.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2404.08878.pdf">Paper</a>|
+<img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
+	<a href="https://zhewang77.github.io/GAIMIMO/">Code</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+
+<tr>
 <td><a href="https://limedire.github.io/GAI-Game/"><img class="responsive-img" style="vertical-align:middle" src="accessories/gaigame.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
 <td>
 <b>Generative AI for Game Theory-based Mobile Networking</b>
