--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 
 <tr>
-<td><a href="https://limedire.github.io/GAI-Game/"><img class="responsive-img" style="vertical-align:middle" src="accessories/zhe1.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td><a href="https://zhewang77.github.io/GAIMIMO/"><img class="responsive-img" style="vertical-align:middle" src="accessories/zhe1.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
 <td>
 <b>Generative AI Agent for Next-Generation MIMO Design: Fundamentals, Challenges, and Vision</b>
 <br>Zhe Wang, Jiayi Zhang, Hongyang Du, Ruichen Zhang, Dusit Niyato, Bo Ai, Khaled B. Letaief<br>
