--- a/index.html
+++ b/index.html
@@ -65,17 +65,20 @@
 </tr>
 
 <tr>
-<td>< a href=" ">< img class="responsive-img" style="vertical-align:middle" src="accessories/MOE.png"  width="200" height="inherit" border="1px" alt="" /></ a></td>
+<td><a href="https://alvinliu97.github.io/MOEGAI-metaverse/"><img class="responsive-img" style="vertical-align:middle" src="accessories/MOE.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
 <td>
 <b>Fusion of Mixture of Experts and Generative Artificial Intelligence in Mobile Edge Metaverse</b>
 <br> Guangyuan Liu, Hongyang Du, Dusit Niyato, Jiawen Kang, Zehui Xiong, Abbas Jamalipour, Shiwen Mao, Dong In Kim<br>
 <em>Under Review</em> <br>
-<em> < img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">The paper explores the potential of mixture of experts with generative AI, focusing on mobile edge Metaverse.</b> </em> <br>
-< img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
-< a href="https://arxiv.org/abs/2404.03321">Paper</ a>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">The paper explores the potential of mixture of experts with generative AI, focusing on mobile edge Metaverse.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/abs/2404.03321">Paper</a>|
+<img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
+	<a href="https://alvinliu97.github.io/MOEGAI-metaverse/">Code</a>
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
+
 
 <tr>
 <td><a href="https://zhewang77.github.io/GAIMIMO/"><img class="responsive-img" style="vertical-align:middle" src="accessories/zhe1.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
@@ -87,7 +90,7 @@
 <img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
 <a href="https://arxiv.org/pdf/2404.08878.pdf">Paper</a>|
 <img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
-	<a href="https://zhewang77.github.io/GAIMIMO/">Code</a>
+<a href="https://zhewang77.github.io/GAIMIMO/">Code</a>
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
