--- a/index.html
+++ b/index.html
@@ -141,6 +141,22 @@
 
 
 <tr>
+<td><a href="https://lancelot1998.github.io/IRL/"><img class="responsive-img" style="vertical-align:middle" src="accessories/IRL-2.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Defining Problem from Solutions: Inverse Reinforcement Learning (IRL) and Its Applications for Next-Generation Networking</b>
+<br> Yinqiu Liu, Ruichen Zhang, Hongyang Du, Dusit Niyato, Jiawen Kang, Zehui Xiong, and Dong In Kim<br>
+<em>Under Review</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">The paper explores the applications of IRL in next-generation networking.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/abs/2404.01583">Paper</a>|
+<img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
+	<a href="https://lancelot1998.github.io/IRL/">Code</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+
+<tr>
 <td><a href="https://hongyangdu.github.io/MoE4OPT/"><img class="responsive-img" style="vertical-align:middle" src="accessories/dumoeopt.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
 <td>
 <b>Mixture of Experts for Network Optimization: A Large Language Model-enabled Approach</b>
