--- a/index.html
+++ b/index.html
@@ -146,11 +146,15 @@
 <b>Defining Problem from Solutions: Inverse Reinforcement Learning (IRL) and Its Applications for Next-Generation Networking</b>
 <br> Yinqiu Liu, Ruichen Zhang, Hongyang Du, Dusit Niyato, Jiawen Kang, Zehui Xiong, and Dong In Kim<br>
 <em>Under Review</em> <br>
-<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">The paper explores the applications of IRL in next-generation networking.</b> </em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">This paper propose a Mixture of Experts (MoE) framework, augmented with Large Language Models (LLMs), to analyze user objectives and constraints, select specialized DRL experts, and weigh each decision.</b> </em> <br>
 <img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
-<a href="https://arxiv.org/abs/2404.01583">Paper</a>|
+<a href="https://arxiv.org/pdf/2404.01583">Paper</a> |
 <img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
-	<a href="https://lancelot1998.github.io/IRL/">Code</a>
+<a href="https://lancelot1998.github.io/IRL/">Code</a>|
+<img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.youtube.com/watch?v=hXTmq7OEXV8">YouTube</a> |
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.bilibili.com/video/BV1Qs421c7nz/?spm_id_from=333.999.0.0&vd_source=5a4e6b423c5145e693f64416250476f9">Bilibili</a>
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
