--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 <tr>
 <td><a href="https://hongyangdu.github.io/GDMOPT/"><img class="responsive-img" style="vertical-align:middle" src="accessories/GDMOPT1.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
 <td>
-<b>Beyond Deep Reinforcement Learning: A Tutorial on Generative Diffusion Models in Network Optimization</b>
+<b>Enhancing Deep Reinforcement Learning: A Tutorial on Generative Diffusion Models in Network Optimization</b>
 <br>Hongyang Du, Ruichen Zhang, Yinqiu Liu, Jiacheng Wang, Yijing Lin, Zonghang Li, Dusit Niyato, Jiawen Kang, Zehui Xiong, Shuguang Cui, Bo Ai, Haibo Zhou, Dong In Kim<br>
 <em>IEEE COMST </em> <br>
 <em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(245,50,190);">The first tutorial paper to explain various applications of diffusion models and coding examples.</b> </em> <br>
 <img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
-<a href="https://arxiv.org/pdf/2308.05384.pdf">Paper</a> |
+<a href="https://ieeexplore.ieee.org/abstract/document/10529221/">Paper</a> |
 <img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
 <a href="https://hongyangdu.github.io/GDMOPT/">Code</a> |
 <img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
