--- a/index.html
+++ b/index.html
@@ -80,6 +80,26 @@
 </tr>
 
 
+
+<tr>
+<td><a href="https://github.com/Yaoqi-Yang97/GAI4Game/"><img class="responsive-img" style="vertical-align:middle" src="accessories/GAI4GAME.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Exploring Equilibrium Strategies in Network Games with Generative AI</b>
+<br> Yaoqi Yang, Hongyang Du, Zehui Xiong, Dusit Niyato, Zhu Han<br>
+<em>Under Review</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">The paper explores the applications of generative AI in various stages of the game theory lifecycle, including model formulation, solution derivation, and strategy improvement. </b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/abs/2405.08289">Paper</a>|
+<img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
+	<a href="https://github.com/Yaoqi-Yang97/GAI4Game/">Code</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+
+	
+
+
 <tr>
 <td><a href="https://zhewang77.github.io/GAIMIMO/"><img class="responsive-img" style="vertical-align:middle" src="accessories/zhe1.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
 <td>
